--- a/index.html
+++ b/index.html
@@ -27,44 +27,50 @@
   <!-- Add your site or application content here -->
   <section class="main-content">
     <div class="about">
-      <h1>Pole Goals 2021</h1>
-      <h5>by Work It Dance and Fitness</h5>
-      <h3>What pole trick should you master this year?</h3>
+      <div class="title">
+        <h1>Pole Goals 2021</h1>
+      </div>
+      <h3 id="subtitle">What pole trick should you master this year?</h3>
     </div>
     <div id="choose-level">
       <h3>Choose Your Level:</h3>
-      <button onClick="beginnerResult()">Beginner</button>
-      <button onClick="intermediateResult()">Intermediate</button>
-      <button onClick="advancedResult()">Advanced</button>
-      <button onClick="extremeResult()">Extreme</button>
-      <p onClick="explainLevels()">Not sure what level you are?</p>
-      <div id="level-details">
-        <h5>Beginner</h5>
-        <p>I’m new to pole and am still learning or mastering basic spins, tricks, and climbs. I cannot invert.</p>
-        <h5>Intermediate</h5>
-        <p>I've been poling for a while and can sit on the pole, invert, and perform a variety of spins and tricks.</p>
-        <h5>Advanced</h5>
-        <p>I'm a confident and experienced poler who can perform aerial inverts and tricks with two or fewer points of
-          contact.</p>
-        <h5>Extreme</h5>
-        <p>I'm a very confident, expert poler who can perform a variety of aerial tricks and tricks with two or fewer
-          points of contact.</p>
-        <button onClick="closeExplain()">Close</button>
+      <div class="level-buttons">
+        <button onClick="beginnerResult()">Beginner</button>
+        <button onClick="intermediateResult()">Intermediate</button>
+        <button onClick="advancedResult()">Advanced</button>
+        <button onClick="extremeResult()">Extreme</button>
       </div>
+      <p onClick="explainLevels()">Not sure what level you are?</p>
     </div>
-    <div id="result">
-      <h3>Your 2021 Goal is...</h3>
+    <div id="level-details" class="hidden">
+      <h5>Beginner</h5>
+      <p>I’m new to pole and am still learning or mastering basic spins, tricks, and climbs. I cannot invert.</p>
+      <h5>Intermediate</h5>
+      <p>I've been poling for a while and can sit on the pole, invert, and perform a variety of spins and tricks.</p>
+      <h5>Advanced</h5>
+      <p>I'm a confident and experienced poler who can perform aerial inverts and tricks with two or fewer points of
+        contact.</p>
+      <h5>Extreme</h5>
+      <p>I'm a very confident, expert poler who can perform a variety of aerial tricks and tricks with two or fewer
+        points of contact.</p>
+      <button onClick="explainLevels()">Close</button>
+    </div>
+    <div id="result" class="hidden">
       <div class="trick">
         <h2 id="trick-name"></h2>
         <img src="" id="trick-image"></img>
-        <p>Already mastered this trick?</p>
-        <button onClick="reset()">Try again!</button>
       </div>
       <div class="cta">
         <p>Start working toward your goal now by signing up for a class at our Norwalk, CT studio!</p>
-        <button><a href="https://clients.mindbodyonline.com/asp/home.asp?studioid=11404">Sign me up!</a></button>
-        <p>or</p>
-        <button><a href="https://www.workitfit.com/">Learn more about Work It</a></button>
+        <div class="cta-buttons">
+          <button><a href="https://clients.mindbodyonline.com/asp/home.asp?studioid=11404">Sign me up!</a></button>
+          <p>or</p>
+          <button><a href="https://www.workitfit.com/">Learn more about Work It</a></button>
+        </div>
+      </div>
+      <div class="reset">
+        <p>Already mastered this trick?</p>
+        <button onClick="reset()">Try again!</button>
       </div>
     </div>
   </section>
@@ -72,7 +78,11 @@
   <footer>
     <div class="logo"><a href="https://www.workitfit.com/"><img src="img/wif_logo_floating_x2.png"
           alt="Work It Dance and Fitness"></a></div>
-    <div class="attribution">Website created by Claire Thompson for Work It Dance and Fitness</div>
+    <div class="attribution">
+      <p>Website created by <a href="https://clairethompson.tech">Claire Thompson</a> <br>for <a
+          href="https://www.workitfit.com">Work It Dance
+          and Fitness</a></p>
+    </div>
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
